--- a/build
+++ b/build
@@ -3,9 +3,8 @@
 doc=$1
 
 # compile .tex document
-rm *.bbl *.aux *.toc
+rm *.bbl *.aux *.toc *.bcf *.out *.nav *.snm *.log *.blg *.vrb *.xml
 xelatex $doc.tex
-#bibtex $doc
 biber $doc
 xelatex $doc.tex
 xelatex $doc.tex
